--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@ Let's <a class="smoothscroll" href="#about"><i>start </i></a>
                   <p>
                      <a href="AKSHAY.pdf" class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
+		          <p>
+                     <a href="emc.pdf" class="button"><i class="fa fa-download"></i>Download Certificate</a>
+                  </p>
                </div>
 
             </div> <!-- end row -->
