--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Akshay Rajkumar</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
+    <link rel="icon" type="image/x-icon" href="./favicon.png">
     <!-- Bootstrap + JohnDoe main styles -->
 	<link rel="stylesheet" href="assets/css/johndoe.css">
     <script
