--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <header class="header">
         <div class="container">
             <ul class="social-icons pt-3">
-                <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" href="#"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-google" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-instagram" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="https://www.linkedin.com/in/akshay-rajkumar/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="https://x.com/tisakshayraj"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="mailto:akshayrajkumar96.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="https://medium.com/@akshayrajkumar96"><i class="fa-brands fa-medium" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="https://github.com/akshayrajkumar/"><i class="ti-github" aria-hidden="true"></i></a></li>
             </ul>  
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
@@ -101,11 +101,11 @@
                     <li><span>Address</span> : Whitefield, Bangalore, Karnataka, India</li>
                 </ul>
                 <ul class="social-icons pt-3">
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-facebook" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-twitter" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-google" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-instagram" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link text-light" href="https://www.linkedin.com/in/akshay-rajkumar/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link text-light" href="https://x.com/tisakshayraj"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link text-light" href="mailto:akshayrajkumar96.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link text-light" href="https://medium.com/@akshayrajkumar96"><i class="fa-brands fa-medium" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link text-light" href="https://github.com/akshayrajkumar/"><i class="ti-github" aria-hidden="true"></i></a></li>
                 </ul>  
             </div>
             <div class="col-lg-4 about-card">
@@ -411,11 +411,11 @@
                             </div>
                         </div>
                         <ul class="social-icons pt-4">
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-facebook" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-twitter" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-google" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-instagram" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
+                            <li class="social-item"><a class="social-link text-light" href="https://www.linkedin.com/in/akshay-rajkumar/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+                            <li class="social-item"><a class="social-link text-light" href="https://x.com/tisakshayraj"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a></li>
+                            <li class="social-item"><a class="social-link text-light" href="mailto:akshayrajkumar96.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+                            <li class="social-item"><a class="social-link text-light" href="https://medium.com/@akshayrajkumar96"><i class="fa-brands fa-medium" aria-hidden="true"></i></a></li>
+                            <li class="social-item"><a class="social-link text-light" href="https://github.com/akshayrajkumar/"><i class="ti-github" aria-hidden="true"></i></a></li>
                         </ul> 
                     </div>
                 </div>
