--- a/index.html
+++ b/index.html
@@ -17,13 +17,19 @@
   type="text/javascript"
   src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
 </script>
+<style>
+    #social_footer {
+        color: black;
+    }
+
+    
+    </style>
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
     <a href="components.html" class="btn btn-primary btn-component" data-spy="affix" data-offset-top="600"><i class="ti-shift-left-alt"></i> Components</a>
     <header class="header">
         <div class="container">
-            <ul class="social-icons pt-3">
                 <li class="social-item"><a class="social-link text-light" href="https://www.linkedin.com/in/akshay-rajkumar/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="https://x.com/tisakshayraj"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="mailto:akshayrajkumar96.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
@@ -97,7 +103,7 @@
                     <li><span>Medium</span>  : @akshayrajkumar96 </li>
                     <li><span>Address</span> : Whitefield, Bangalore, Karnataka, India</li>
                 </ul>
-                <ul class="social-icons pt-3">
+                <ul class="social-icons pt-3" id="social_footer">
                     <li class="social-item"><a class="social-link text-light" href="https://www.linkedin.com/in/akshay-rajkumar/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                     <li class="social-item"><a class="social-link text-light" href="https://x.com/tisakshayraj"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a></li>
                     <li class="social-item"><a class="social-link text-light" href="mailto:akshayrajkumar96.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
@@ -407,7 +413,7 @@
                                 <h6 class="d-inline">Email :<br> <span class="text-muted">akshayrajkumar96@gmail.com</span></h6>
                             </div>
                         </div>
-                        <ul class="social-icons pt-4">
+            <ul class="social-icons pt-3" id="social_footer">
                             <li class="social-item"><a class="social-link text-light" href="https://www.linkedin.com/in/akshay-rajkumar/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link text-light" href="https://x.com/tisakshayraj"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link text-light" href="mailto:akshayrajkumar96.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
