--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <li><span>Medium</span>  : @akshayrajkumar96 </li>
                     <li><span>Address</span> : Whitefield, Bangalore, Karnataka, India</li>
                 </ul>
-                <ul class="social-icons pt-3" id="social_footer">
+                <ul class="social-icons pt-3">
                     <li class="social-item"><a class="social-link text-light" href="https://www.linkedin.com/in/akshay-rajkumar/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                     <li class="social-item"><a class="social-link text-light" href="https://x.com/tisakshayraj"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a></li>
                     <li class="social-item"><a class="social-link text-light" href="mailto:akshayrajkumar96.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
@@ -412,7 +412,7 @@
                                 <h6 class="d-inline">Email :<br> <span class="text-muted">akshayrajkumar96@gmail.com</span></h6>
                             </div>
                         </div>
-            <ul class="social-icons pt-3" id="social_footer">
+            <ul class="social-icons pt-3">
                             <li class="social-item"><a class="social-link text-light" href="https://www.linkedin.com/in/akshay-rajkumar/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link text-light" href="https://x.com/tisakshayraj"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link text-light" href="mailto:akshayrajkumar96.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
