--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <a href="components.html" class="btn btn-primary btn-component" data-spy="affix" data-offset-top="600"><i class="ti-shift-left-alt"></i> Components</a>
     <header class="header">
         <div class="container">
-            <ul>
+            <ul class="social-icons pt-3">
                 <li class="social-item"><a class="social-link text-light" href="https://www.linkedin.com/in/akshay-rajkumar/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="https://x.com/tisakshayraj"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="mailto:akshayrajkumar96.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
