--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Akshay Rajkumar</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
-    <!-- Font Awesome CDN -->
+    <!-- Font Awesome CDN 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" type="image/x-icon" href="/favicon.png">
+    --><link rel="icon" type="image/x-icon" href="/favicon.png">
     <!-- Bootstrap + JohnDoe main styles -->
 	<link rel="stylesheet" href="assets/css/johndoe.css">
     <script
