--- a/index.html
+++ b/index.html
@@ -460,11 +460,12 @@
             document.getElementById('contact-form').addEventListener('submit', function(event) {
                 event.preventDefault();
                 // these IDs from the previous steps
+                console.log('Sending email...');
                 emailjs.sendForm('service_9xcv8da', 'template_bvpkn5p', this)
                     .then(() => {
-                        console.log('SUCCESS!');
+                        console.log('Email Sent. Will reach you shortly!');
                     }, (error) => {
-                        console.log('FAILED...', error);
+                        console.log('Oops! Something went wrong. Mail was not sent!', error);
                     });
             });
         }
