EmailJs Script fix

--- a/index.html
+++ b/index.html
@@ -464,8 +464,10 @@
                 emailjs.sendForm('service_9xcv8da', 'template_bvpkn5p', this)
                     .then(() => {
                         console.log('Email Sent. Will reach you shortly!');
+                        alert('Email Sent. Will reach you shortly!');
                     }, (error) => {
                         console.log('Oops! Something went wrong. Mail was not sent!', error);
+                        alert('Oops! Something went wrong. Mail was not sent!');
                     });
             });
         }
