--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Akshay Rajkumar</h1>
                 <h6 class="header-mono" >Lead Engineer, System/Solutions Architecture - SAP ABAP </h6>
-                <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Print Resume</button>
+                <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i><a href="Resume-Akshay-Rajkumar-2024.pdf">Resume</a></button>
             </div>
         </div>
     </header>
@@ -87,7 +87,7 @@
                 <span class="line mb-5"></span>
                 <h5 class="mb-3">A SAP ABAP Developer Located In Our Lovely Planet Earth</h5>
                 <p class="mt-20">Akshay is a SAP ABAP Consultant with over 7 years experience in ABAP and ABAP on HANA. His work is primarily developing Reports, Enhancement, User-exits, BADIs, SmartForms, Adobe Forms, SAP Script, JavaScript. He has experience in Sales and Distribution (SD), Sales Order Management (SOM) and Finance (FI) module, GTS and currently working on EHSM, PLM and GRC. Have also worked on ABAP on HANA, CDS views and OData.</p>
-                <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My CV</button>
+                <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i><a href="Resume-Akshay-Rajkumar-2024.pdf">Download My CV</a></button>
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Personal Info</h3>
