--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <h5 class="mb-3">A SAP ABAP Developer Located In Our Lovely Planet Earth</h5>
                 <p class="mt-20">Akshay is a SAP ABAP Consultant with over 7 years experience in ABAP and ABAP on HANA. His work is primarily developing Reports, Enhancement, User-exits, BADIs, SmartForms, Adobe Forms, SAP Script, JavaScript. He has experience in Sales and Distribution (SD), Sales Order Management (SOM) and Finance (FI) module, GTS and currently working on EHSM, PLM and GRC. Have also worked on ABAP on HANA, CDS views and OData.</p>
                 <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i><a href="Resume-Akshay-Rajkumar-2024.pdf">Download My CV</a></button>
-                <p class="mt-20">For more latest updates, Visit my LinkedIn profile <a class="social-link" href="https://www.linkedin.com/in/akshay-rajkumar/"><i class="ti-linkedin"            aria-hidden="true"></p> 
+                <p class="mt-20">For more latest updates, Visit my LinkedIn profile <a class="social-link" href="https://www.linkedin.com/in/akshay-rajkumar/"><i class="ti-linkedin" aria-hidden="true"></a></p> 
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Personal Info</h3>
