--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Akshay Rajkumar</h1>
                 <h6 class="header-mono" >Lead Engineer, System/Solutions Architecture - SAP ABAP </h6>
-                <button class="btn btn-primary btn-rounded"  href="Resume-Akshay-Rajkumar-2024.pdf"><i class="ti-printer pr-2"></i>Resume</button>
+                <button class="btn btn-primary btn-rounded"  href="Resume-Akshay-Rajkumar-2024.pdf"><i class="ti-printer pr-2"></i>View Resume</button>
             </div>
         </div>
     </header>
