--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <li class="social-item"><a class="social-link text-light" href="https://x.com/tisakshayraj"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="mailto:akshayrajkumar96.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="https://medium.com/@akshayrajkumar96"><i class="fa-brands fa-medium" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="https://hachyderm.io/@akshayraj"><i class="fa-brands fa-mastodon" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="https://github.com/akshayrajkumar/"><i class="ti-github" aria-hidden="true"></i></a></li>
             </ul>  
             <div class="header-content">
@@ -108,6 +109,7 @@
                     <li class="social-item"><a class="social-link" href="https://x.com/tisakshayraj">                  <i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a></li>
                     <li class="social-item"><a class="social-link" href="mailto:akshayrajkumar96.com">                 <i class="fa fa-envelope"         aria-hidden="true"></i></a></li>
                     <li class="social-item"><a class="social-link" href="https://medium.com/@akshayrajkumar96">        <i class="fa-brands fa-medium"    aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link" href="https://hachyderm.io/@akshayraj">             <i class="fa-brands fa-mastodon" aria-hidden="true"></i></a></li>
                     <li class="social-item"><a class="social-link" href="https://github.com/akshayrajkumar/">          <i class="ti-github"              aria-hidden="true"></i></a></li>
                 </ul>  
             </div>
@@ -418,6 +420,7 @@
                             <li class="social-item"><a class="social-link" href="https://x.com/tisakshayraj"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link" href="mailto:akshayrajkumar96.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link" href="https://medium.com/@akshayrajkumar96"><i class="fa-brands fa-medium" aria-hidden="true"></i></a></li>
+                            <li class="social-item"><a class="social-link" href="https://hachyderm.io/@akshayraj"><i class="fa-brands fa-mastodon" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link" href="https://github.com/akshayrajkumar/"><i class="ti-github" aria-hidden="true"></i></a></li>
                         </ul> 
                     </div>
