--- a/index.html
+++ b/index.html
@@ -423,6 +423,9 @@
                             <li class="social-item"><a class="social-link" href="https://hachyderm.io/@akshayraj"><i class="fa-brands fa-mastodon" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link" href="https://github.com/akshayrajkumar/"><i class="ti-github" aria-hidden="true"></i></a></li>
                         </ul> 
+                        <div>
+                            <img src="logo.png" alt="Logo">
+                        </div>
                     </div>
                 </div>
             </div>
