--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@
                             <li class="social-item"><a class="social-link" href="https://hachyderm.io/@akshayraj"><i class="fa-brands fa-mastodon" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link" href="https://github.com/akshayrajkumar/"><i class="ti-github" aria-hidden="true"></i></a></li>
                         </ul> 
-                        <div class="col-10">
-                            <img src="logo.png" alt="Logo">
+                        <div class="col-10" >
+                            <img src="logo.png" alt="Logo" style="padding: 10px;">
                         </div>
                     </div>
                 </div>
