--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                             <li class="social-item"><a class="social-link" href="https://github.com/akshayrajkumar/"><i class="ti-github" aria-hidden="true"></i></a></li>
                         </ul> 
                         <div class="col-10" >
-                            <img src="logo.png" alt="Logo" style="padding: 10px;">
+                            <img src="logo.png" alt="Logo" style="width: 50%;">
                         </div>
                     </div>
                 </div>
