Font Family Updatae

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <ul class="navbar-nav brand">
                     <img src="assets/imgs/avatar.jpg" alt="" class="brand-img">
                     <li class="brand-txt">
-                        <h5 class="brand-title" style="font-family:'Amsterdam';font-weight:normal;"">Akshay Rajkumar</h5>
+                        <h5 class="brand-title">Akshay Rajkumar</h5>
                         <div class="brand-subtitle">SAP ABAP Developer</div>
                     </li>
                 </ul>
