--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     font-family: 'Amsterdam';
     font-style: normal; 
     src: url('Amsterdam.woff') format("woff");
+    font-size: medium;
 }
 
 #brandname {
