--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     font-family: 'Amsterdam';
     font-style: normal; 
     src: url('Amsterdam.woff') format("woff");
-    font-size: medium;
+    font-size: small;
 }
 
 #brandname {
